# tf2-backpack-parser

./: .env.example  .gitignore  README.md  pyproject.toml  tox.ini
backpack_tf2/app/: bp_acc.py  bp_api.py  classifieds.py  config.py  helpers.py  listings_repo.py  main.py  misc.py  setup.py
